- Fixed alignment for viewer in review page

--- a/xCheckStudio/Webviewer/CSS/module2.css
+++ b/xCheckStudio/Webviewer/CSS/module2.css
@@ -3874,7 +3874,7 @@ div {
 }
 .module2 .bg1 .white1 .tab1 {
   background-color    : rgba(255,255,255,0.0);
-  top                 : 3px;
+  top                 : 5px;
   height              : 30px;
   width               : 135px;
   position            : absolute;
@@ -4084,7 +4084,7 @@ div {
 }
 .module2 .bg1 .tab {
   background-color    : rgba(255,255,255,0.0);
-  top                 : 2px;
+  top                 : 5px;
   height              : 35px;
   width               : 135px;
   position            : absolute;
@@ -4108,8 +4108,8 @@ div {
 }
 .module2 .bg1 .analytics {
   background-color    : rgba(255,255,255,0.0);
-  top                 : 1px;
-  height              : auto;
+  top                 : 5px;
+  height              : 30px;
   width               : 121px;
   position            : absolute;
   margin              : 0;
@@ -4121,7 +4121,7 @@ div {
   font-size           : 17.0px;
   color               : rgba(51, 51, 51, 1.0);
   text-align          : center;
-  line-height         : 30.0px;
+  line-height         : 18.0px;
 }
 .module2 .bg1 .bitmap {
   background-color    : rgba(255,255,255,0.0);
